<resources>
    <string name="app_name">For My Kerala</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_usage_help">Here is the helpline for using For My Kerala application.

First select whether you are a receiver or a Donor.
Receiver is a person who needs help while Donor is a person who is ready to provide help. After selection,you will need to register your account using your mobile phone number. You will receive a One Time Password(OTP) as SMS to the number provided . Enter the OTP and continue. After that you can select a 4 digit PIN which will be used as your login password.
Next, you can provide your details such as name address district and taluk. If registered as receiver you will be taken to a  screen where you can see the list of items which are available with our donors.
After selection you can wait for the donor to accept your request.Meanwhile  our volunteer  will call you and verify whether you are a legit person or not.
 If registered as donor,after verification you will be redirected to a page where you can provide the items and edit the count at anytime.As in the case of receiver , verification will be done by our volunteer.
After editing the count you can view the list of receivers which are already verified by our volunteers.
 You can accept and can always view the status of the accepted request on a tab. Our volunteer will handle the closing of the case.</string>


    <string name="accepted_donors">Accepted Donors</string>
    <string name="donor_name">Donor Name</string>
    <string name="phone_number">Phone number</string>
    <string name="no_donors_accepted">No Donors Accepted</string>
    <string name="donor_login">Donor Login</string>
    <string name="what_can_you_donate">What can you donate?</string>
    <string name="english">English</string>
    <string name="help_title">How to use ForMyKerala App</string>
    <string name="select_your_role">Select Your Role</string>
    <string name="donor">Donor</string>
    <string name="help">Help</string>
    <string name="checking_for_updates">Checking for Updates</string>
    <string name="no_network_ncheck_your_connection_and_restart_app">No network. Check your connection and restart app.</string>
    <string name="verification_code">Verification Code</string>
    <string name="please_enter_the_verification_code_sent">Please enter the verification code sent</string>
    <string name="to">to</string>
    <string name="resend_otp_in">Resend OTP in :</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="pin_for_security">PIN for Security</string>
    <string name="please_enter_a_4_digit_pin_for_your_login">Please enter a 4 digit PIN for your Login</string>
    <string name="please_remember_the_same_for_later_login">(Please remember the same for Later Login)</string>
    <string name="save">Save</string>
    <string name="registered_requirements">Registered Requirements</string>
    <string name="no_of_items_requested">No. of Items Requested</string>
    <string name="check_status">Check Status</string>
    <string name="register_request">Register Request</string>
    <string name="view_registered_requests">View Registered Requests</string>
    <string name="register">Register</string>
    <string name="address">Address</string>
    <string name="district">District</string>
    <string name="taluk">Taluk</string>
    <string name="receiver_login">Receiver Login</string>
    <string name="your_10_digit_phone_number">Your 10 Digit Phone Number</string>
    <string name="your_4_digit_pin">Your 4 Digit PIN</string>
    <string name="forgot_pin">Forgot PIN?</string>
    <string name="new_user_register_now">New User? Register Now!</string>
    <string name="select_requirements">Select Requirements</string>
    <string name="search_your_items">Search your items</string>
    <string name="search_requests">Search by name</string>
    <string name="your_quantity">Your Quantity</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="verified">Verified</string>
    <string name="accepted_requests">Accepted Requests</string>
    <string name="phone">Phone</string>
    <string name="no_accepted_items">No Accepted Items</string>
    <string name="log_out">Log Out</string>
    <string name="edit_quantity_of_the_items">Edit Quantity of the Items</string>
    <string name="submit">Submit</string>
    <string name="edit">Edit</string>
    <string name="people_you_can_help">People You Can Help</string>
    <string name="receiver">Receiver</string>
    <string name="product">Product</string>
    <string name="quantity">Quantity</string>
    <string name="status">Status</string>
    <string name="no_verified_requests">No Verified Requests</string>
    <string name="your_account_is_yet_to_be_verified">Your account is yet to be verified. You will receive a call from our volunteer within 24 hours after registration.If you are in need of a quick verification, send a WhatsApp message or SMS \'QV\' to  7902661414.</string>
    <string name="name">Name</string>
   <string name="receiver_name">Receiver Name</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="please_a_choose_a_requirement">Please a Choose a Requirement</string>
    <string name="please_click_back_again_to_exit">Please click BACK again to exit</string>
    <string name="verify">Verify</string>
    <string name="toast_valid_ph_no">Please Enter Valid Phone Number</string>
    <string name="toast_valid_otp">Please Enter Valid OTP</string>
    <string name="wrong_otp">Wrong OTP</string>
    <string name="toast_valid_pin">Please Enter Valid PIN</string>
    <string name="toast_all_fields">Please provide all fields</string>
    <string name="info_alert">Our volunteer will contact you to the registered phone number with in 24 hours for verification purposes</string>
    <string name="try_again">try again</string>
    <string name="loading">Loading</string>
    <string name="toast_value">Please enter a value</string>
    <string name="toast_reqiured_quantity">Your Value shoulde be greater than 0 and less than or equal to the required quantity</string>
    <string name="your_country">Your Country</string>
    <string name="search_fail">Searched item not found</string>
    <string name="search_null">Please enter a name to search</string>
    <string name="accept_all">Accept all</string>
    <string-array name="available_languages">
        <item>Select Language</item>
        <item>English</item>
        <item>Malayalam</item>
    </string-array>

    <string-array name="District">

        <item><string-array name="Kottayam">
            <item>mundakayam</item>
        </string-array></item>
    </string-array>

</resources>
