<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#F5F7F8"
    android:nestedScrollingEnabled="true"
    android:fillViewport="true"
    tools:context="in.co.iodev.formykerala.Activities.EditItemFragment">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:elevation="5dp"
        app:cardCornerRadius="5dp"
        android:layout_height="match_parent">
        <LinearLayout
            android:background="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/people_you_can_help"
                android:textSize="22sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="45dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="6"
                        android:gravity="center"
                        android:text="@string/receiver"
                        android:textSize="15dp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="6"
                        android:gravity="center"
                        android:text="@string/product"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="6"
                        android:gravity="center"
                        android:text="@string/quantity"
                        android:textSize="15sp" />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="6"
                        android:gravity="center"
                        android:text="@string/status"
                        android:textSize="15sp" />

                </LinearLayout>

                <View
                    android:id="@+id/separator"
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/black" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ListView
                        android:id="@+id/donor_items_edit_listview"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="30dp"
                        android:layout_marginTop="10dp"
                        android:divider="@android:color/transparent"
                        android:dividerHeight="10dp"/>

                    <TextView
                        android:id="@+id/no_entry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/no_verified_requests"
                        android:visibility="invisible" />

                    <TextView
                        android:id="@+id/not_verified"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/your_account_is_yet_to_be_verified"
                        android:visibility="invisible" />
                </RelativeLayout>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="70dp"
                    android:layout_marginRight="70dp"
                    android:layout_marginTop="20dp"
                    android:elevation="5dp"
                    app:cardCornerRadius="25dp">

                </android.support.v7.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>


</ScrollView>
