<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="match_parent"
>

    <LinearLayout
        android:id="@+id/form_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3a78e2"
        android:layout_marginBottom="120dp"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:src="@mipmap/back" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="-20dp"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:textSize="23sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/name"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded_edge_white_bg"
            android:inputType="text"
            android:paddingLeft="20dp"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/district"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/district"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded_edge_white_bg"
            android:popupBackground="@color/cardview_light_background"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"

            android:layout_marginTop="5dp"
            android:text="@string/taluk"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/taluk"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="70dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded_edge_white_bg"
            android:inputType="text"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            />


    </LinearLayout></LinearLayout>
        <android.support.v7.widget.CardView
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginBottom="70dp"
            android:elevation="10dp"

            app:cardCornerRadius="20dp">


            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical|center_horizontal"
                android:background="@android:color/white"
                android:gravity="center_vertical|center_horizontal|center"
                android:text="@string/submit"
                android:textColor="@color/colorPrimaryBlue"/>

            <ProgressBar
                android:visibility="invisible"
                android:id="@+id/pgbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/white"
                android:textColor="@color/colorPrimaryBlue"/>


        </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="10dp"
        android:elevation="10dp"

        app:cardCornerRadius="20dp">


        <Button
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:background="@android:color/white"
            android:gravity="center_vertical|center_horizontal|center"
            android:text="@string/logout"
            android:textColor="@color/colorPrimaryBlue"/>



    </android.support.v7.widget.CardView>

</RelativeLayout>
