<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryBlue"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/back_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:src="@mipmap/back" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/donor_login"
                android:gravity="center_horizontal"
                android:textColor="@android:color/white"
                android:textSize="32sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:paddingLeft="8dp"
                android:text="@string/your_10_digit_phone_number" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="10px"
                android:layout_marginRight="50dp"
                android:layout_marginLeft="50dp">

                    <EditText
                        android:background="@android:color/white"
                        android:id="@+id/phone"
                        android:padding="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:ems="15"
                        android:inputType="phone" />
            </android.support.v7.widget.CardView>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:paddingLeft="8dp"
                    android:text="@string/your_4_digit_pin" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_marginBottom="30dp">

                    <android.support.v7.widget.CardView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        android:elevation="5dp"
                        app:cardCornerRadius="15dp">

                        <EditText
                            android:id="@+id/otp1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@android:color/white"
                            android:gravity="center"
                            android:inputType="number|numberPassword"
                            android:maxLength="1" />
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        android:elevation="5dp"
                        app:cardCornerRadius="15dp">

                        <EditText
                            android:id="@+id/otp2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@android:color/white"
                            android:gravity="center"
                            android:inputType="number|numberPassword"
                            android:maxLength="1" />
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        android:elevation="5dp"
                        app:cardCornerRadius="15dp">

                        <EditText
                            android:id="@+id/otp3"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@android:color/white"
                            android:gravity="center"
                            android:inputType="number|numberPassword"
                            android:maxLength="1" />
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        android:elevation="5dp"
                        app:cardCornerRadius="15dp">

                        <EditText
                            android:id="@+id/otp4"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@android:color/white"
                            android:gravity="center"
                            android:inputType="number|numberPassword"
                            android:maxLength="1" />
                    </android.support.v7.widget.CardView>

                </LinearLayout>



        </LinearLayout>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="25dp">

        <Button
            android:id="@+id/request_otp_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#4885ED"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/pgbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/white"
            android:textColor="@color/colorPrimaryBlue"
            android:visibility="invisible" />

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/forg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:paddingLeft="8dp"
        android:text="@string/forgot_pin" />

    <TextView
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/new_user_register_now"

        />
</LinearLayout>
</ScrollView>